--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ httpx = "^0.25.1"
 pylint = "^3.0.2"
 mistune = "^3.0.2"
 nanoid = "^2.0.0"
+icalendar = "^5.0.11"
+rich = "^13.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
