--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ mistune = "^3.0.2"
 nanoid = "^2.0.0"
 icalendar = "^5.0.11"
 rich = "^13.7.0"
+alive-progress = "^3.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
