--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ nanoid = "^2.0.0"
 icalendar = "^5.0.11"
 rich = "^13.7.0"
 alive-progress = "^3.1.5"
+aiohttp-cors = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
